syntax = "proto3";

message PatientCase {
  string id = 1;
  int32 ageYears = 2;
  int32 ageDays = 3;
  uint32 birthDate = 4;
  uint32 admDate = 5;
  uint32 sepDate = 6;
  int32 leaveDays = 7;
  string sex = 8;
  string adm = 9;
  string sep = 10;
  int32 gestage = 11;
  int32 los = 12;
  int32 hmv = 13;
  bool bh = 14;

  repeated Diagnosis diagnoses = 15;
  repeated Procedure procedures = 16;

  message Diagnosis {
    string code = 1;
  }

  message Procedure {
    string code = 1;
    int32 date = 2;

    enum Side {
      L = 0;
      R = 1;
      B = 2;
    }

    Side side = 3;
  }
}

message GroupResult {
  string drg = 1;
  string mdc = 2;
  uint32 pccl = 3;
  uint32 gst = 4;
}

message GroupResponse {
  GroupResult result = 1;
  PatientCase pc = 2;
}

message ecw {
  message SwissDrg {
    int32 ecw = 1;
    int32 ct = 2;
  }

  message Tarpsy {
    int32 dcw = 1;
    int32 ecw = 2;
  }

  message StReha {
    int32 ecw = 1;
    int32 phase = 2;
  }
}
